# Optimizer

./: readme.md
src/: CMakeLists.txt
src/include/: ArmijoLineSearch.cpp  ArmijoLineSearch.hpp  CentralDifference.cpp  CentralDifference.hpp  ConstantStepSize.cpp  ConstantStepSize.hpp  GradientDescent.cpp  GradientDescent.hpp  StepSize.cpp  StepSize.hpp  StrongWolfeSearch.cpp  StrongWolfeSearch.hpp
test/: CMakeLists.txt  converge.cpp
